# openweight-llm-council

./: .gitignore  README.md  pyproject.toml  start.sh  test_backend.py
backend/: config.py  llm_client.py  main.py  ollama_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
